Get rid of UTF-8 literal all over the place